--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "dependencies": {
     "unist-util-visit": "^5.0.0"
   },
+  "engines": {
+    "node": ">=14.0"
+  },
   "devDependencies": {
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
